@@ -336,13 +336,14 @@ Revision history for Perl extension ClearCase::Argv.
 	- ipc: return value for diff
 	- stopped shifting exit codes: $? == 256 results in 0...
 	- cygwin/exec: ipc mode not forced anymore
-	- ALL CHANGES FROM 1.41 THROUGH HERE CONTRIBUTED BY Marc Girod.
 
 1.48 Sun Feb 21 16:26:59 GMT 2010
         - _ipc_cmd: localize $_ to avoid modifying it in the caller context
 
 1.49 Thu Mar  4 19:36:08 GMTST 2010
         - Removed an extra newline in fork mode under cygwin.
+	- cygwin: one more case of converting backslashes: vob:\foo (e.g. hyperlink)
+	- ALL CHANGES FROM 1.41 THROUGH HERE CONTRIBUTED BY Marc Girod.
 
 BACKWARD COMPATIBILITY NOTES:
 
